# cookiecutter-snekpack

./: .gitignore  .prettierignore  README.md  cookiecutter.json  justfile
.github/workflows/: tests.yml
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.package_name}}/: .bumpversion.cfg  .flake8  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yml  CITATION.cff  CONTRIBUTING.md  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.md  justfile  noxfile.py  pyproject.toml  setup.cfg  setup.py  tox.ini
{{cookiecutter.package_name}}/.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  codecov.yml
{{cookiecutter.package_name}}/.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
{{cookiecutter.package_name}}/.github/workflows/: create-release.yml  cruft.yml  tests.yml
{{cookiecutter.package_name}}/docs/: Makefile
{{cookiecutter.package_name}}/docs/source/: cli.rst  conf.py  index.rst  installation.rst  usage.rst
{{cookiecutter.package_name}}/src/{{cookiecutter.package_name}}/: __init__.py  __main__.py  api.py  cli.py  version.py
{{cookiecutter.package_name}}/tests/: __init__.py  test_version.py
