# See https://setuptools.readthedocs.io/en/latest/build_meta.html
[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "{{cookiecutter.package_name}}"
version = "0.0.1-dev"
description = "{{cookiecutter.short_description}}"
readme = "README.md"
authors = [
    { name = "{{cookiecutter.author_name}}", email = "{{cookiecutter.email}}" }
]
maintainers = [
    { name = "{{cookiecutter.author_name}}", email = "{{cookiecutter.email}}" }
]

# See https://packaging.python.org/en/latest/guides/writing-pyproject-toml/#classifiers
# Search tags using the controlled vocabulary at https://pypi.org/classifiers
classifiers = [
    "Development Status :: 1 - Planning",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: Pytest",
    "Framework :: tox",
    "Framework :: Sphinx",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    # TODO add your topics from the Trove controlled vocabulary (see https://pypi.org/classifiers)
]
keywords = [
    "snekpack", # please keep this keyword to credit the cookiecutter-snekpack template
    "cookiecutter",
    # TODO add your own free-text keywords
]

# License Information. This can be any valid SPDX identifiers that can be resolved
# with URLs like https://spdx.org/licenses/MIT
# See https://packaging.python.org/en/latest/guides/writing-pyproject-toml/#license
license = { text = "MIT", file = "LICENSE" }

requires-python = ">=3.8"
dependencies = [
    "more_itertools", # missing from itertools in stdlib
    "tqdm", # progress bars
    {% if cookiecutter.command_line_interface|lower != "false" %}
    "click",
    "more_click",
    {% endif %}
]

[project.optional-dependencies]
tests = [
    "pytest",
    "coverge",
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
    {% if cookiecutter.command_line_interface|lower != "false" %}"sphinx-click", {% endif %}
    "sphinx_automodapi",
    # Include if your project uses Pydantic:
    # "autodoc_pydantic",
    # To include LaTeX comments easily in your docs.
    # If you uncomment this, don't forget to do the same in docs/conf.py
    # texext
]

# See https://packaging.python.org/en/latest/guides/writing-pyproject-toml/#urls
[project.urls]
"Bug Tracker" = "https://github.com/{{cookiecutter.__gh_slug}}/issues"
Homepage = "https://github.com/{{cookiecutter.__gh_slug}}"
Repository = "https://github.com/{{cookiecutter.__gh_slug}}.git"
Documentation = "https://{{cookiecutter.package_name}}.readthedocs.io"

[tool.setuptools]
packages = ":find"
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]  # list of folders that contain the packages (["."] by default)

# See https://setuptools.pypa.io/en/latest/userguide/datafiles.html
[tool.setuptools.package-data]
"*" = ["*.*"]

{% if cookiecutter.command_line_interface|lower != "false" %}
[project.scripts]
{{ cookiecutter.package_name } } = "{{cookiecutter.package_name}}.cli:app"
{% endif %}

[tool.cruft]
skip = [
    "**/__init__.py",
    "tests/*"
]

# MyPy, see https://mypy.readthedocs.io/en/stable/config_file.html
[tool.mypy]
plugins = [
    "pydantic.mypy",
]

# Doc8, see https://doc8.readthedocs.io/en/stable/readme.html#ini-file-usage
[tool.doc8]
max-line-length = 120

# Coverage, see https://coverage.readthedocs.io/en/latest/config.html
[tool.coverage.run]
branch = true
source = "{{cookiecutter.package_name}}"
omit = [
    "tests/*",
    "docs/*",
]

[tool.coverage.paths]
source = [
    "src/{{cookiecutter.package_name}}",
    ".tox/*/lib/python*/site-packages/{{cookiecutter.package_name}}",
]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == \"__main__\":",
    "if TYPE_CHECKING:",
    "def __str__",
    "def __repr__",
]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100
include_trailing_comma = true
reverse_relative = true

[tool.ruff]
line-length = 100
extend-include = ["*.ipynb"]

[tool.ruff.lint]
# See https://docs.astral.sh/ruff/rules
extend-select = [
    "F", # pyflakes
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "C90", # mccabe
    "I", # isort
    "UP", # pyupgrade
    "D", # pydocstyle
    "B", # bugbear
    "S", # bandit
    "T20", # print
    "N", # pep8 naming
    "ERA", # eradicate commented out code
    "NPY", # numpy checks
    "RUF", # ruff rules
]
ignore = [
    "D105", # Missing docstring in magic method
    "S404",
    "S603",
    "E203", # Black conflicts with the following
]

# See https://docs.astral.sh/ruff/settings/#per-file-ignores
[tool.ruff.lint.per-file-ignores]
# Ignore commented out code in Sphinx configuration file
"docs/source/conf.py" = ["ERA001"]

[tool.ruff.lint.pydocstyle]
convention = "pep257"
