##########################
# Setup.py Configuration #
##########################
[metadata]
name = {{cookiecutter.package_name}}
version = 0.0.1-dev
description = {{cookiecutter.short_description}}
long_description = file: README.md
long_description_content_type = text/markdown

# URLs associated with the project
url = https://github.com/{{cookiecutter.github_organization_name}}/{{cookiecutter.github_repository_name}}
download_url = https://github.com/{{cookiecutter.github_organization_name}}/{{cookiecutter.github_repository_name}}/releases
project_urls =
    Tracker = https://github.com/{{cookiecutter.github_organization_name}}/{{cookiecutter.github_repository_name}}/issues
    Source = https://github.com/{{cookiecutter.github_organization_name}}/{{cookiecutter.github_repository_name}}
    Documentation = https://{{cookiecutter.package_name}}.readthedocs.io

# Author information
author = {{cookiecutter.author_name}}
author_email = {{cookiecutter.author_email}}
maintainer = {{cookiecutter.author_name}}
maintainer_email = {{cookiecutter.author_email}}

# License Information. This can be any valid SPDX identifiers that can be resolved
# with URLs like https://spdx.org/licenses/MIT
license = MIT
license_files =
    LICENSE

# Search tags using the controlled vocabulary at https://pypi.org/classifiers
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Framework :: Pytest
    Framework :: tox
    Framework :: Sphinx
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3 :: Only
    # TODO add your topics from the Trove controlled vocabulary (see https://pypi.org/classifiers)
keywords =
    snekpack
    cookiecutter
    # TODO add your own free-text keywords

[options]
# What versions of Python are supported?
python_requires = >=3.8

# Installation requirements
install_requires =
    # Missing itertools from the standard library you didn't know you needed
    more_itertools
    # Use progress bars excessively
    tqdm{% if cookiecutter.command_line_interface|lower != "false" %}
    # Command line tools
    click
    more_click{% endif %}
    # TODO your requirements go here

# Override questionable defaults, don't worry about these
zip_safe = false
include_package_data = True

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.extras_require]
tests =
    pytest
    coverage
docs =
    sphinx
    sphinx-rtd-theme
    {% if cookiecutter.command_line_interface|lower != "false" %}sphinx-click{% endif %}
    sphinx_automodapi
    # Remove if your project doesn't use Pydantic
    autodoc_pydantic
    # To include LaTeX comments easily in your docs. 
    # If you uncomment this, don't forget to do the same in docs/conf.py
    # texext

{% if cookiecutter.command_line_interface|lower != "false" %}
[options.entry_points]
console_scripts =
    {{cookiecutter.package_name}} = {{cookiecutter.package_name}}.cli:main
{% endif %}
